kubernetes/skywalker/application/truecommand/truecommand.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: truecommand

spec:
  gateways:
    - cluster/feldman-in
  hosts:
    - truecommand.feldman.in
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: truecommand
            port:
              number: 80
